legio-deployer: improved deployment